# pepper

./: .env.example  .gitignore  CLAUDE.md  README-OAuth.md  README.md  ROADMAP.md  TODO.md  main.py  pyproject.toml
app/: __init__.py  config.py  graph_client.py  graph_utils.py  main.py  pkce.py  token_storage.py
app/routers/: auth.py  graph.py
docs/: AZURE_AD_SETUP.md  OAUTH_SETUP.md
tests/: __init__.py  test_auth_routes.py  test_graph_client.py  test_health.py  test_pkce.py  test_token_storage.py
