[project]
name = "pepper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.25.1",
    "fastapi>=0.120.2",
    "httpx>=0.28.1",
    "msal>=1.34.0",
    "msgraph-core>=1.3.8",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.3",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.38.0",
]
